<resources>
    <string name="app_name">Memontum</string>
    <string name="action_settings">Memo Inflator</string>
    <string name="about">About</string>
    <string name="welcome1"> All Notes place here!</string>
    <string name="welcome2">Settings Kunwari</string>
    <string name="insert_note">Insert Note</string>
    <string name="menu_inflate">Inflate</string>
    <string name="notethunder">Memontum</string>
    <string name="title">Dream Title</string>
    <string name="your_thoughts">My Thoughts...</string>
    <string name="capture">Capture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">gallery</string>
    <string name="selecty">select</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="emptyListlbl">Click the "+" button below to start.</string>
    <string name="my_memontum">My Memontum</string>
    <string name="pin">Pin</string>
    <string name="attach_image">Attach Image</string>
</resources>
