<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:class="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memoColour"
    android:theme="@style/Theme.Design"
    tools:context="com.example.jcgut.notethunder.DetailFragment">

    <TextView
        android:id="@+id/largeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_memontum"
        android:textSize="35sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/largeLabel">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                android:hint="@string/title"
                android:inputType="text" />

            <com.example.jcgut.notethunder.cutomEdittext.LinedEdittext xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/editContent"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_below="@id/editTitle"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:hint="@string/your_thoughts" />
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/attach_image"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <LinearLayout
                android:id="@+id/imglayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/getImg"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="centerInside"
                    class:srcCompat="@drawable/ic_image_black_24dp"
                    android:layout_marginEnd="4dp"/>


                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:drawableLeft="@drawable/ic_camera_alt_black_24dp"
                    android:text="@string/capture" />

                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_photo_album_black_24dp"
                    android:text="@string/gallery" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/imglayout"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_save_black_24dp"
                    android:text="@string/save"
                    android:layout_marginEnd="2dp"/>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:drawableLeft="@drawable/ic_cancel_black_24dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
                    android:text="@string/pin"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
