<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:class="http://schemas.android.com/apk/res-auto"
    android:background="@color/memoColour"
    android:clickable="true"
    android:theme="@style/Theme.Design">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Memontum:"
        android:textSize="20sp"
        android:gravity="top"
        android:id="@+id/largeLabel"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/largeLabel">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/title"
                android:inputType="text"
                android:gravity="center"/>
            <com.example.jcgut.notethunder.cutomEdittext.LinedEdittext
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/editTitle"
                android:layout_marginTop="15dp"
                android:gravity="top"
                android:hint="@string/your_thoughts" />
        </RelativeLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:id="@+id/bottomButtons"
                android:layout_below="@id/imglayout">
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/save"
                    android:drawableLeft="@drawable/ic_save_black_24dp"/>
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cancel"
                    android:drawableLeft="@drawable/ic_cancel_black_24dp"/>
                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btnSave"
                    android:text="DELETE"
                    android:visibility="gone"
                    android:layout_marginRight="8dp"
                    android:drawableLeft="@drawable/ic_delete_black_24dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
